--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -1,21 +1,46 @@
 {{ define "content" }}
 
-<img src="/static/upload/sample.png" width="200" height="auto">
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-4 col-lg-4 bg-secondary"> </div>
+    <div class="col-sm-4 col-lg-4">
+      <div class="profile_image">
+      <img src="/static/upload/sample.png" width="250" height="auto">
+      <br/>
+    <div class="user_info">
+      <font size="6">ユーザ名 : {{ .Name }}</font>
+      <br/>
+      <br/>
+      </div>
+          <div class="form-group">
+            <form method="post" action="/upload" enctype="multipart/form-data">
+              <br/>
+              <label for="file1">↓プロフィール画像を変更↓</label>
+              <input type="file" id="file1" name="uploadfile" class="form-control-file" required>
+              <br/>
+              <p> <input type="submit" name="save" value="更新"> </p>
+              <br/>
+              <a class="btn btn-primary" href="/" role="button">ホームに戻る</a>
+          </form>
+        </div>
+      </div>
+    </div>
 
-<div>
-  <font size="4">ユーザ名 : {{ .Name }}</font>
-</div>
-
-<br/>
-
-<div class="form-group">
-  <form method="post" action="/upload" enctype="multipart/form-data">
-    <label for="file1">↓プロフィール画像を変更↓</label>
-    <input type="file" id="file1" name="uploadfile" class="form-control-file" required>
-    <br/>
-    <p> <input type="submit" name="save" value="更新"> </p>
-    <a class="btn btn-primary" href="/login" role="button">ホームに戻る</a>
-  </form>
+    <div class="col-sm-4 col-lg-4 bg-secondary">
+    </div>
+    
+  </div>
+    <div class="row">
+    <div class="col-sm-4 col-lg-4 bg-secondary"> </div>
+    <div class="col-sm-4 col-lg-4">
+      <br/> <br/>
+      <br/> <br/>
+      <br/>
+      <br/>
+      <br/>
+    </div>
+    <div class="col-sm-4 col-lg-4 bg-secondary"> </div>
+  </div>
 </div>
 
 {{end}}
