--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,7 @@
     <title>Go Forum</title>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/login.css" rel="stylesheet">
+    <link href="/static/css/index.css" rel="stylesheet">
     <link href="/static/css/mypage.css" rel="stylesheet">
   </head>
   <body>
